Add generated code from Swagger file
