# src/generated/java/brian/temp/spring/boot/model/Person.java
@@ -1,41 +1,24 @@
-/*
- * Api Documentation
- * Api Documentation
- *
- * OpenAPI spec version: 1.0
- * 
- *
- * NOTE: This class is auto generated by the swagger code generator program.
- * https://github.com/swagger-api/swagger-codegen.git
- * Do not edit the class manually.
- */
-
-
-package io.swagger.client.model;
+package brian.temp.spring.boot.model;
 
 import java.util.Objects;
-import java.util.Arrays;
-import com.google.gson.TypeAdapter;
-import com.google.gson.annotations.JsonAdapter;
-import com.google.gson.annotations.SerializedName;
-import com.google.gson.stream.JsonReader;
-import com.google.gson.stream.JsonWriter;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
-import java.io.IOException;
-
+import javax.validation.constraints.*;
 /**
- * Hello
+ * Person
  */
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaClientCodegen", date = "2019-08-21T21:19:06.177-04:00")
-public class Hello {
-  @SerializedName("age")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2019-08-26T14:49:09.354-04:00")
+
+public class Person   {
+  @JsonProperty("age")
   private Integer age = null;
 
-  @SerializedName("name")
+  @JsonProperty("name")
   private String name = null;
 
-  public Hello age(Integer age) {
+  public Person age(Integer age) {
     this.age = age;
     return this;
   }
@@ -53,7 +36,7 @@ public class Hello {
     this.age = age;
   }
 
-  public Hello name(String name) {
+  public Person name(String name) {
     this.name = name;
     return this;
   }
@@ -80,9 +63,9 @@ public class Hello {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    Hello hello = (Hello) o;
-    return Objects.equals(this.age, hello.age) &&
-        Objects.equals(this.name, hello.name);
+    Person person = (Person) o;
+    return Objects.equals(this.age, person.age) &&
+        Objects.equals(this.name, person.name);
   }
 
   @Override
@@ -90,11 +73,10 @@ public class Hello {
     return Objects.hash(age, name);
   }
 
-
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class Hello {\n");
+    sb.append("class Person {\n");
     
     sb.append("    age: ").append(toIndentedString(age)).append("\n");
     sb.append("    name: ").append(toIndentedString(name)).append("\n");
@@ -112,6 +94,5 @@ public class Hello {
     }
     return o.toString().replace("\n", "\n    ");
   }
-
 }
 
